objects/Municipality__c.object
<CustomObject>
    <fields>
        <fullName>Year_Law_Passed__c</fullName>
        <inlineHelpText>The year that the law for legalizing gaming passed.</inlineHelpText>
        <label>Year Law Passed</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Casinos_in_State__c</fullName>
        <label># of Casinos in State</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Families__c</fullName>
        <label># of Families</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Municipality</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Allows_6th_VGT__c</columns>
        <columns>Confirmed_With__c</columns>
        <columns>Alert_Account_Owners__c</columns>
        <columns>VGT_Permit_Fee_Per_Machine__c</columns>
        <columns>VGT_Licensing_Requirement__c</columns>
        <columns>VGT_Expiration_of_Permit__c</columns>
        <columns>VGT_Additional_Requirements__c</columns>
        <columns>Municipality_Fee__c</columns>
        <columns>Hometown_Role__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Georgia</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <columns>Nbr_of_Accel_locations__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>GA</value>
        </filters>
        <label>All Georgia</label>
    </listViews>
    <listViews>
        <fullName>All_Illinois_Municipalities</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>All Illinois Municipalities</label>
    </listViews>
    <listViews>
        <fullName>All_Missouri_Municipalities</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <columns>Nbr_of_Accel_locations__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MO</value>
        </filters>
        <label>All Missouri Municipalities</label>
    </listViews>
    <listViews>
        <fullName>All_Nebraska_Municipalities</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Nbr_of_gaming_locations_in_town__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NE</value>
        </filters>
        <label>All Nebraska Municipalities</label>
        <sharedTo>
            <group>List_View_Sales_Operation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PA_Municipalities_to_QA</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>PA</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>†</value>
        </filters>
        <label>All PA Municipalities to QA</label>
    </listViews>
    <listViews>
        <fullName>All_Pennsylvania_Municipalities</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>PA</value>
        </filters>
        <label>All Pennsylvania Municipalities</label>
    </listViews>
    <listViews>
        <fullName>All_State_Accounts</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Year_Law_Passed__c</columns>
        <columns>State_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All State Accounts</label>
    </listViews>
    <listViews>
        <fullName>Illinois_Municipalities_Opt_In</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <filters>
            <field>Allows_Gaming__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Illinois Municipalities - Opt In</label>
    </listViews>
    <listViews>
        <fullName>Illinois_Municipalities_Opt_Out</fullName>
        <columns>NAME</columns>
        <columns>Allows_Gaming__c</columns>
        <columns>Average_HDP_for_Accel_Locations__c</columns>
        <columns>Average_HPD_For_Municipality__c</columns>
        <columns>Establishment_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <filters>
            <field>Allows_Gaming__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Illinois Municipalities - Opt Out</label>
    </listViews>
    <nameField>
        <label>Municipality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Municipalities</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>State_Field_Must_Be_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(State__c))</errorConditionFormula>
        <errorMessage>Please select a State for this municipality</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Law_Passed_must_be_a_number</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNUMBER(  Year_Law_Passed__c  ))</errorConditionFormula>
        <errorDisplayField>Year_Law_Passed__c</errorDisplayField>
        <errorMessage>Year Law Passed must be a number.</errorMessage>
    </validationRules>
</CustomObject>